# mubox

./: .prettierrc.json  README.md  index.html  latest.json  package.json  pnpm-lock.yaml  vite.config.js
src/: App.vue  AppContent.vue  AppRoute.vue  PlayerBoostrap.vue  Popovers.vue  Themes.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio_metadata.rs  http_client.rs  lib.rs  main.rs  setup.rs
src/assets/iconfont/: demo_index.html  iconfont.css  iconfont.js  iconfont.json
src/common/: Player.js  Track.js  Utils.js
src/components/: AddFolderFileBtn.vue  AlbumControl.vue  ArtistControl.vue  BatchActionBtn.vue  ImageTextTile.vue  ImageTextTileLoadingMask.vue  Navigator.vue  PlayControl.vue  PlayMeta.vue  PlaybackQueueItem.vue  PlaylistCategoryBar.vue  PlaylistsControl.vue  ProgressBar.vue  SearchBar.vue  SliderBar.vue  SongItem.vue  SongListControl.vue  VolumeBar.vue  WindowCtr.vue
src/layout/: DefaultLayout.vue  DefaultMainCenter.vue  DefaultMainContent.vue  DefaultMainLeft.vue  DefaultMainTop.vue  SimpleLayout.vue
src/route/: router.js
src/store/: appCommonStore.js  localMusicStore.js  platformStore.js  playStore.js  playlistSquareStore.js  settingStore.js  themeStore.js
src/views/: LocalMusicView.vue  PlaybackQueueView.vue  PlaylistDetailView.vue  PlaylistSquareView.vue  SearchView.vue  SettingView.vue
